--- a/TomatBot.csproj
+++ b/TomatBot.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core\Content\Punishments\**" />
+    <EmbeddedResource Remove="Core\Content\Punishments\**" />
+    <None Remove="Core\Content\Punishments\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove=".gitignore" />
   </ItemGroup>
 
@@ -21,10 +27,6 @@
     <None Update="token.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core\Content\Punishments\" />
   </ItemGroup>
 
 </Project>
