--- a/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>9</LangVersion>
+    <AssemblyName>Tomat.TomatBot</AssemblyName>
+    <RootNamespace>Tomat.TomatBot</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
