--- a/Tomat.TomatBot/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot/Tomat.TomatBot.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tomat.Commands\Tomat.CommandFramework.csproj" />
+    <ProjectReference Include="..\Tomat.CommandFramework\Tomat.CommandFramework.csproj" />
     <ProjectReference Include="..\Tomat.Conveniency\Tomat.Conveniency.csproj" />
     <ProjectReference Include="..\Tomat.MiscWeb\Tomat.MiscWeb.csproj" />
     <ProjectReference Include="..\Tomat.ServiceFramework\Tomat.ServiceFramework.csproj" />
