--- a/Tomat.TomatBot/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot/Tomat.TomatBot.csproj
@@ -40,4 +40,8 @@
     <ProjectReference Include="..\Tomat.TatsuSharp\Tomat.TatsuSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
