--- a/Tomat.TomatBot/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot/Tomat.TomatBot.csproj
@@ -10,16 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Content\Punishments\**" />
-    <EmbeddedResource Remove="Content\Punishments\**" />
-    <None Remove="Content\Punishments\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove=".gitignore" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
@@ -33,11 +28,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tomat.Conveniency\Tomat.Conveniency.csproj" />
-    <ProjectReference Include="..\Tomat.Logging\Tomat.Logging.csproj" />
-    <ProjectReference Include="..\Tomat.MiscWeb\Tomat.MiscWeb.csproj" />
-    <ProjectReference Include="..\Tomat.ServiceFramework\Tomat.ServiceFramework.csproj" />
     <ProjectReference Include="..\Tomat.TatsuSharp\Tomat.TatsuSharp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Activities\" />
   </ItemGroup>
 
 </Project>
