Reimplement help command!

--- a/Tomat.TomatBot/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot/Tomat.TomatBot.csproj
@@ -33,6 +33,8 @@
 
   <ItemGroup>
     <Folder Include="Common\Activities\" />
+    <Folder Include="Content\Commands\Modules\" />
+    <Folder Include="Core\CommandContext\" />
   </ItemGroup>
 
 </Project>
