Over-engineered a temperature calculator.

--- a/Tomat.TomatBot/Tomat.TomatBot.csproj
+++ b/Tomat.TomatBot/Tomat.TomatBot.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Common\Activities\" />
-    <Folder Include="Content\Commands\Modules\" />
+    <Folder Include="Content\Commands\Modules\Temperature\" />
     <Folder Include="Core\CommandContext\" />
   </ItemGroup>
 
